infrastructure/networking/gateway/gw-internal.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway-internal
  namespace: gateway
spec:
  addresses:
  - type: IPAddress
    value: 192.168.0.35
  gatewayClassName: cilium
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "*.lan"
      allowedRoutes:
        namespaces:
          from: All
    - name: ha-oauth
      protocol: HTTP
      port: 8123
      hostname: "homeassistant.local"
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.lan"
      tls:
        certificateRefs:
          - name: cert-local
            kind: Secret
            group: "" # required
      allowedRoutes:
        namespaces:
          from: All
